makeLicenseFIle entry point renamed to newLicenseFIles
